<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TriviaBattler</string>

    <string name="preference_file_key">preference_file_key</string>
    <string name="preference_userId_key">logged_in_user_id</string>

    <string name="statistics">Statistics</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin</string>

    <string name="edit_daily_question">Edit daily question</string>
    <string name="edit_statistics">Edit statistics</string>
    <string name="welcome">Welcome,</string>
    <string name="statistics_title">Statistics</string>
    <string name="total_questions_answered">Total Questions Answered:</string>
    <string name="correct_answers">Correct Answers:</string>
    <string name="incorrect_answers">Incorrect Answers:</string>
    <string name="total_score">Total Score:</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>

    <string name="gif_desc">Fun trivia animation</string>

    <string-array name="category_list">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </string-array>
</resources>