<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stats_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_title"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/q_answered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_questions_answered"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/stats_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/qa_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/q_answered"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/correct_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/q_answered"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/ca_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/correct_answers"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/incorrect_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_answers"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/correct_answers"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/ia_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/incorrect_answers"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/total_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_score"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/incorrect_answers"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/ts_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/total_score"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>